[package]
name = "st"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sha2 = "0.10.6"
actix-multipart = "0.5.0"
futures-util = "0.3.26"
tempfile = "3.4.0"
infer = "0.12.0"
same-file = "1.0.6"
